--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- The following tags are important for web crawlers to know what your website is about (SEO)-->
-  <meta name="description" content="Replace this content with a description of your website">
-  <meta name="author" content="What's your name?">
+  <meta name="description" content="Welcome to Tien's personal website">
+  <meta name="author" content="Tien Duong">
 
-  <title>Temoc's Personal Website</title>
+  <title>Tien's Personal Website</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -29,7 +29,7 @@
     <div class="container">
 
       <!-- Put your name in the line of code below in place of "Temoc" -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Temoc</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">TDuong</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -47,13 +47,13 @@
           </li>
           <!--Insert link to your github-->
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link btn text-white btn-social mx-1" href="#">
+            <a class="nav-link btn text-white btn-social mx-1" href="https://github.com/Tien1609">
               <i class="fab fa-fw fa-github"></i>
             </a>
           </li>
           <!--Insert link to your linkedin-->
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link btn text-white btn-social mx-1" href="#">
+            <a class="nav-link btn text-white btn-social mx-1" href="https://www.linkedin.com/in/duong-tien-042624195/">
               <i class="fab fa-fw fa-linkedin"></i>
             </a>
           </li>
@@ -68,11 +68,12 @@
 
       <!-- Masthead Avatar Image -->
       <!-- Add your image/profile name -->
-      <img style="" class="masthead-avatar mb-5 rounded-circle" src="temoc-primary.png" alt="">
+      <img style="" class="masthead-avatar mb-5 rounded-circle" src="img/portfolio/skyline.jpg" alt="">
 
       <!-- Masthead Heading -->
       <!-- Type your name in the line of code below in place of "Temoc's Page" -->
-      <h1 class="masthead-heading text-uppercase mb-0">Temoc's Page</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Tien P. Duong
+      </h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -85,7 +86,7 @@
 
       <!-- Masthead Subheading -->
       <!-- Edit your graduation year and major in the line of code below -->
-      <p class="masthead-subheading font-weight-light mb-0">Class of 2020 - B.S. in Computer Science</p>
+      <p class="masthead-subheading font-weight-light mb-0">Class of 2022 - B.S. in Computer Science</p>
       <!-- Add your resume by editing the name of your file -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="Temocs Resume.pdf" target="_blank">
@@ -117,7 +118,7 @@
       <!-- Write a short description about yourself here -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Hi! My name is Temoc and I am the mascot for the University of Texas at Dallas (UTD). I have been the mascot here since 1969. My interests include D3 athletics, chess, and video games.</p>
+          <p class="lead">Hi! My name is Tien Duong and I am a Computer Science major at the University of Texas at Dallas (UTD). I am currently in my sophomore year. My interests include soccer, collecting model cars, and video games.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">I really enjoy helping my fellow peers in achieving their academic goals as well as reading cool books. My name is Temoc because it's Comet spelled backwards.</p>
