--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <!-- Masthead Avatar Image -->
       <!-- Add your image/profile name -->
-      <img style="" class="masthead-avatar mb-5 rounded-circle" src="img/portfolio/skyline.jpg" alt="">
+      <img class="masthead-avatar mb-5 rounded-circle" src="img/portfolio/skyline.jpg" alt="">
 
       <!-- Masthead Heading -->
       <!-- Type your name in the line of code below in place of "Temoc's Page" -->
@@ -89,7 +89,7 @@
       <p class="masthead-subheading font-weight-light mb-0">Class of 2022 - B.S. in Computer Science</p>
       <!-- Add your resume by editing the name of your file -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="Temocs Resume.pdf" target="_blank">
+        <a class="btn btn-xl btn-outline-light" href="assets/Tien's Resume.pdf" target="_blank">
           <i class="fas fa-download mr-2"></i>
           Resume
         </a>
