--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
 
       <!-- Put your name in the line of code below in place of "Temoc" -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">TDuong</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">TPDuong</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
