--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <p class="lead">Hi! My name is Tien Duong and I am a Computer Science major at the University of Texas at Dallas (UTD). I am currently in my sophomore year. My interests include soccer, collecting model cars, and video games.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I really enjoy solving problems as well as acquiring new knowlegdge. I also like taking diecast pictures and listening to Bee Gees in my free time.</p>
+          <p class="lead">I really enjoy working in groups as well as helping other teammates. I also like taking diecast pictures and listening to Bee Gees in my free time.</p>
         </div>
       </div>
 
