--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <!-- Masthead Avatar Image -->
       <!-- Add your image/profile name -->
-      <img class="masthead-avatar mb-5 rounded-circle" src="img/portfolio/skyline.jpg" alt="">
+      <img class="masthead-avatar mb-5 rounded-circle" src="img/portfolio/IMG_9787.JPG" alt="">
 
       <!-- Masthead Heading -->
       <!-- Type your name in the line of code below in place of "Temoc's Page" -->
